css fix right and center align and image resized

--- a/oerpub/rhaptoslabs/swordpushweb/static/main-max-01.css
+++ b/oerpub/rhaptoslabs/swordpushweb/static/main-max-01.css
@@ -247,6 +247,11 @@ div.left {
     float: left;
     clear: both;
 }
+div.left {
+    float: right;
+    clear: both;
+}
+
 
 #edit-existing-contents ul, #edit-existing-contents li{
   list-style-type: none;
